objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>Cloufi__Default</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Approved</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Completed</fullName>
        </values>
        <values>
            <fullName>Declined</fullName>
        </values>
        <values>
            <fullName>Funded</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Agent_Name__c</fullName>
        <label>Agent Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amount_Requested__c</fullName>
        <label>Amount Requested</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Any_Lawsuits_or_Judgments_Pending_agains__c</fullName>
        <label>Any Lawsuits,Tax Liens,Judgments Pending</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Any_open_State_Federal_Tax_Liens_Against__c</fullName>
        <label>Are You In A Current Consumer Proposal?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>App_In_Missing_Info_Stage_Date_Time__c</fullName>
        <label>App In Missing Info Stage Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>App_In_Missing_Info_Stage_Date__c</fullName>
        <label>App In Missing Info Stage Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>App_Sent_Stage_Date_Time__c</fullName>
        <label>App Sent Stage Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>App_Sent_Stage_Date__c</fullName>
        <label>App Sent Stage Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Application_Sent_by_Rep__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Application Sent by Rep</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Application_Status__c</fullName>
        <label>Application Status</label>
        <picklist>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Application_URL__c</fullName>
        <label>Application URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approved_Stage_Date_Time__c</fullName>
        <label>Approved Stage Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Approved_Stage_Date__c</fullName>
        <label>Approved Stage Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Assigned_Legal_Associate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned Legal Associate</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assigned_Underwiter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned Underwiter</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Average_Monthly_Credit_Card_Sales__c</fullName>
        <label>Average Monthly Credit Card Sales</label>
        <picklist>
            <picklistValues>
                <fullName>$0 - $4,999</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$5,000 - $9,999</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$10,000 - $24,999</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$25,000 - $49,999</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$50,000 - $99,999</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$100,000 - $249,999</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$250,000+</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Average_Monthly_Revenue__c</fullName>
        <label>Average Monthly Revenue</label>
        <picklist>
            <picklistValues>
                <fullName>$0 - $4,999</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$5,000 - $9,999</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$10,000 - $24,999</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$25,000 - $49,999</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$50,000 - $99,999</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$100,000 - $249,999</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$250,000+</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Balance__c</fullName>
        <label>Balance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bank_statements_Email_to_Sales_Support__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bank statements Email to Sales Support</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Base_URL__c</fullName>
        <description>Used to get base URL in Twilio Task Trigger for Incoming Message email alert</description>
        <formula>LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Base URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Broker_Fee_Payable__c</fullName>
        <label>Broker Fee Payable</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Broker_Fee_Received__c</fullName>
        <label>Broker Fee Received</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Broker_Fee__c</fullName>
        <label>Broker Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Budget_Confirmed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Budget Confirmed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Business_Address_Street__c</fullName>
        <label>Physical Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Business_City__c</fullName>
        <label>Physical City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Fax_Number__c</fullName>
        <label>Business Fax Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Business_Landlord_or_Mortgage_Bank__c</fullName>
        <label>Business Landlord or Mortgage Bank</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Phone_Number__c</fullName>
        <label>Business Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Business_Start_Date__c</fullName>
        <label>Date Business Started</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Business_State_Prov__c</fullName>
        <label>State/Province</label>
        <picklist>
            <picklistValues>
                <fullName>Alberta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>British Columbia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manitoba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Brunswick</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nova Scotia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ontario</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prince Edward Island</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quebec</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Saskatchewan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Newfoundland Labrador</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Business_Zip_Postal_Code__c</fullName>
        <label>Physical Postal Code/Zip Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_Agent_Email__c</fullName>
        <formula>CS_Agent__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CS Agent Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_Agent_Phone__c</fullName>
        <formula>CS_Agent__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CS Agent Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_Agent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CS Agent</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CSAgent</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cancelled_Dropbox_Folder_Path__c</fullName>
        <label>Cancelled Dropbox Folder Path</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Chat__c</fullName>
        <label>Chat</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Closed_Lost_Stage_Date_Time__c</fullName>
        <label>Closed Lost Stage Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Closed_Lost_Stage_Date__c</fullName>
        <label>Closed Lost Stage Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Closed_Reason__c</fullName>
        <label>Closed Reason</label>
        <picklist>
            <controllingField>StageName</controllingField>
            <picklistValues>
                <fullName>Accessive Negative Days/NSF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bad Ratings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Behind on Rent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BK/Taxes/CRA/Judge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duplicate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fraud</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High Open Balance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High Rates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low and Inconsistent Balance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low Deposit Count</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low Sales Volume</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Month to Date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Negative Background Check</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not In Biz</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Ready</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Offer Expired</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Over-leveraged for Additional Positions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poor/No Credit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poor Repayment History</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Restricted Industry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Time In Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>With Competitor</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CloufiServicing__Active_Repayment_Schedule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Active Repayment Schedule</label>
        <referenceTo>Cloufi__Repayment_Schedule__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CloufiServicing__Additional_Fees__c</fullName>
        <label>Additional Fees</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CloufiServicing__BankRoutingNumber__c</fullName>
        <label>Bank Routing Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CloufiServicing__Bank_Account_Type__c</fullName>
        <label>Bank Account Type</label>
        <picklist>
            <picklistValues>
                <fullName>Checking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Saving</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CloufiServicing__Bank_Number_Text__c</fullName>
        <label>Bank Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CloufiServicing__Bank_Number__c</fullName>
        <label>Bank Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CloufiServicing__Bank_Routing_Number__c</fullName>
        <label>Bank Routing Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CloufiServicing__Bank_Transit_Number__c</fullName>
        <label>Bank Transit Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CloufiServicing__Credit_Card_Processor__c</fullName>
        <globalPicklist>CloufiServicing__Credit_Card_Processor</globalPicklist>
        <label>Credit Card Processor</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CloufiServicing__CurrentGenerators__c</fullName>
        <label>Current Generator(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CloufiServicing__DeliveryInstallationStatus__c</fullName>
        <label>Delivery/Installation Status</label>
        <picklist>
            <picklistValues>
                <fullName>In progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yet to begin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CloufiServicing__Existing_New_Version__c</fullName>
        <label>Existing New Version</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CloufiServicing__Failed_Payment_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Failed Payment Count</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CloufiServicing__Funding_Date__c</fullName>
        <label>Funding Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CloufiServicing__ISO_Origination_Percentage__c</fullName>
        <label>ISO Origination %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CloufiServicing__ISO_Risk_Assessment_Fee_Per__c</fullName>
        <label>ISO Risk Assessment Fee %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CloufiServicing__ISO_Risk_Assessment_Fee__c</fullName>
        <label>ISO Risk Assessment Fee</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CloufiServicing__ISO__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ISO</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities (ISO)</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CloufiServicing__Latest_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Latest Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CloufiServicing__MainCompetitors__c</fullName>
        <label>Main Competitor(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CloufiServicing__Merchant_ID__c</fullName>
        <label>Merchant ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CloufiServicing__Net_FundingAmount__c</fullName>
        <label>Net Funding Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CloufiServicing__Net_Funding_Amount__c</fullName>
        <formula>Amount - ( CloufiServicing__Origination_Fee__c +  CloufiServicing__Risk_Assessment_Fee__c +  CloufiServicing__Renewal_Payoffs__c +  CloufiServicing__Additional_Fees__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Funding Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CloufiServicing__Next_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Next Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunities (Next Opportunity)</relationshipLabel>
        <relationshipName>Opportunities2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CloufiServicing__OrderNumber__c</fullName>
        <label>Order Number</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CloufiServicing__Origination_Fee__c</fullName>
        <label>Origination Fee</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CloufiServicing__Parent_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunities (Parent Opportunity)</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CloufiServicing__Payment_Installment__c</fullName>
        <label>Payment Installment</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CloufiServicing__Payment_Method__c</fullName>
        <label>Payment Method</label>
        <picklist>
            <picklistValues>
                <fullName>ACH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Check</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Split funding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CloufiServicing__Previous_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Previous Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunities (Previous Opportunity)</relationshipLabel>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CloufiServicing__Renewal_Payoffs__c</fullName>
        <label>Renewal Payoffs</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CloufiServicing__Renewal_Version__c</fullName>
        <label>Renewal Version</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CloufiServicing__Repayment_Schedule_Status__c</fullName>
        <label>Repayment Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pause</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recovery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Write Off</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Send To Collections</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed With Settlement</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CloufiServicing__Risk_Assessment_Fee__c</fullName>
        <label>Risk Assessment Fee</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CloufiServicing__Stack_Version__c</fullName>
        <label>Stack Version</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CloufiServicing__Submission_Country__c</fullName>
        <label>Submission Country</label>
        <picklist>
            <picklistValues>
                <fullName>Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>United States</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Puerto Rico</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CloufiServicing__Syndicate_Payment_Check_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used in batch class for not including those Opportunities which are already been processed for checking Syndicate payments.</description>
        <inlineHelpText>Used in batch class for not including those Opportunities which are already been processed for checking Syndicate payments.</inlineHelpText>
        <label>Syndicate Payment Check Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CloufiServicing__Syndication_Updated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Syndication Updated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CloufiServicing__Total_Syndication_Per__c</fullName>
        <label>Total Syndication %</label>
        <summarizedField>CloufiServicing__Syndication__c.CloufiServicing__Syndication_Percentage__c</summarizedField>
        <summaryFilterItems>
            <field>CloufiServicing__Syndication__c.CloufiServicing__Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </summaryFilterItems>
        <summaryForeignKey>CloufiServicing__Syndication__c.CloufiServicing__Opportunity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CloufiServicing__TrackingNumber__c</fullName>
        <label>Tracking Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CloufiServicing__Transit_Number__c</fullName>
        <label>Transit Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CloufiServicing__Version__c</fullName>
        <label>Version</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CloufiServicing__White_Label_Origination_Fee_Percentage__c</fullName>
        <label>White Label Origination Fee %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CloufiServicing__White_Label_Origination_Fee__c</fullName>
        <label>White Label Origination Fee</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CloufiServicing__White_Label_Risk_Assessment_Fee_Per__c</fullName>
        <label>White Label Risk Assessment Fee %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CloufiServicing__White_Label_Risk_Assessment_Fee__c</fullName>
        <label>White Label Risk Assessment Fee</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CloufiServicing__White_Label__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>White Label</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities (White Label)</relationshipLabel>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cloufi_Twilio__Country__c</fullName>
        <label>Country</label>
        <picklist>
            <picklistValues>
                <fullName>IN</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cloufi_Twilio__Number_In_Use__c</fullName>
        <label>Number In Use</label>
        <picklist>
            <picklistValues>
                <fullName>Owner_1_CellPhone__c</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Owner_2_CellPhone__c</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cloufi_Twilio__Owner_1_Cell__c</fullName>
        <label>Owner 1 Cell</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Cloufi_Twilio__Owner_2_Cell__c</fullName>
        <label>Owner 2 Cell</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Cloufi_Twilio__SMS_Opt_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SMS Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cloufi__ACH_Fee__c</fullName>
        <label>ACH Fee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cloufi__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Loans (Account Name)</relationshipLabel>
        <relationshipName>Loans1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cloufi__Annual_Revenue__c</fullName>
        <label>Annual Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cloufi__Avg_Daily_Bank_Bal__c</fullName>
        <label>Avg Daily Bank Bal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cloufi__Backend_Fees__c</fullName>
        <label>Backend Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Cloufi__Bank_Account__c</fullName>
        <label>Bank Account #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cloufi__Bank_Name__c</fullName>
        <label>Bank Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cloufi__Bank_Phone__c</fullName>
        <label>Bank Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Cloufi__Borrower_Email__c</fullName>
        <label>Borrower Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Cloufi__Borrower_Name__c</fullName>
        <label>Borrower Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cloufi__Borrower_Phone_Number__c</fullName>
        <label>Borrower Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Cloufi__Business_DBA_Name__c</fullName>
        <label>Business DBA Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>